Add core functionality of life display

--- a/finite-lives-helper/finite-lives-helper.csproj
+++ b/finite-lives-helper/finite-lives-helper.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="FiniteLivesHelper.zip" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Celeste">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Celeste\Celeste.exe</HintPath>
     </Reference>
