Edit dependencies s.t. I don't use the binaries in my Steam folder (so I don't have to switch b/t versions)

--- a/finite-lives-helper-tests/finite-lives-helper-tests.csproj
+++ b/finite-lives-helper-tests/finite-lives-helper-tests.csproj
@@ -34,7 +34,7 @@
 
   <ItemGroup>
     <Reference Include="Celeste">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Celeste\Celeste.exe</HintPath>
+      <HintPath>..\redist\Celeste.exe</HintPath>
     </Reference>
   </ItemGroup>
 
